# simplerestaurant

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  docker_compose_prometheus_grafana.yaml  init_db.sh  prometheus.yaml
.github/workflows/: client.yaml  general.yml  server.yml
configuration/: base.yaml
migrations/: 20241201123612_create_table_schema.down.sql  20241201123612_create_table_schema.up.sql  20241201131539_create_ordered_items.down.sql  20241201131539_create_ordered_items.up.sql  20241204014930_create_idempotency.down.sql  20241204014930_create_idempotency.up.sql
simplerestaurant_client/: Cargo.toml
simplerestaurant_client/src/: cancel.rs  main.rs  order.rs  query.rs  utils.rs
src/: errors.rs  lib.rs  main.rs  prometheus.rs  utils.rs
src/boot/: app.rs  database.rs  mod.rs  telemetry.rs
src/config/: configuration.rs  mod.rs  settings.rs
src/controllers/: create_orders.rs  delete_orders.rs  mod.rs  query_orders.rs  utils.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/models/: mod.rs
src/models/schema/: idempotency.rs  mod.rs  ordered_items.rs
tests/api/: health_check.rs  helpers.rs  main.rs  orders.rs
