[package]
name = "simplerestaurant"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["macros","postgres", "runtime-tokio-native-tls", "chrono"] }
actix-web = { version = "4.9", default-features = false, features = ["cookies", "secure-cookies", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sea-query = "0.32"
sea-query-binder = { version = "0.7", features = [
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
    "with-time",
    "with-ipnetwork",
    "with-mac_address",
    "runtime-async-std-native-tls",
] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2"
anyhow = "1"
thiserror = "1"
strum = { version = "0.26", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }

