[package]
name = "simplerestaurant"
version = "0.1.0"
authors = ["gemhung <gembright.stone.hung@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["macros","postgres", "runtime-tokio-native-tls", "chrono"] }
actix-web = { version = "4.9", default-features = false, features = ["cookies", "secure-cookies", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2"
anyhow = "1"
thiserror = "1"
strum = { version = "0.26", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
serde-aux = "4"
secrecy = { version = "0.8", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }

