[package]
name = "simplerestaurant_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2"
clap = { version = "4.5.23", features = ["derive", "usage", "help"] }
anyhow = "1"
